--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "daik",
 	"version": "1.0.0",
 	"description": "discord.js command handler library",
-	"main": "build/index.js",
 	"exports": {
+		"default": "./build/index.js",
 		"plugins": "./build/plugins.js"
 	},
 	"author": "Luyx",
