Fixed fr this time

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"description": "discord.js command handler library",
 	"exports": {
-		"default": "./build/index.js",
-		"plugins": "./build/plugins.js"
+		"./core": "./build/index.js",
+		"./plugins": "./build/plugins.js"
 	},
 	"author": "Luyx",
 	"license": "MIT",
