Fix preinstall script

--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
 		"build": "tsc",
 		"lint": "eslint --cache --fix",
 		"start": "npm run lint && npm run build && node build/index.js",
-		"prepare": "npm run lint && npm run build"
+		"preinstall": "npm run lint && npm run build"
 	}
 }
