Added response system

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "discord.js command handler library",
 	"exports": {
 		".": "./build/index.js",
-		"./plugins": "./build/plugin/plugins/index.js"
+		"./plugins": "./build/plugin/plugins/index.js",
+		"./responses": "./build/response/index.js"
 	},
 	"main": "build/index.js",
 	"author": "Luyx",
